# python-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: unit-test.yml
